[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/option_spinbox/OptionSpinbox.gd" type="Script" id=1]
[ext_resource path="res://theme/Main.tres" type="Theme" id=2]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="HboxContainer" type="HBoxContainer"]
margin_top = 82.0
margin_right = 500.0
margin_bottom = 114.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
title = "Title"

[node name="TitleLabel" type="Label" parent="."]
margin_right = 380.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Title"

[node name="MinusButton" type="Button" parent="."]
margin_left = 384.0
margin_right = 408.0
margin_bottom = 32.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "<"

[node name="ValueLabel" type="Label" parent="."]
margin_left = 412.0
margin_right = 468.0
margin_bottom = 32.0
rect_min_size = Vector2( 56, 0 )
text = "99"
align = 2

[node name="PlusButton" type="Button" parent="."]
margin_left = 472.0
margin_right = 496.0
margin_bottom = 32.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = ">"

[node name="HiddenSlider" type="HSlider" parent="."]
margin_left = 500.0
margin_right = 500.0
custom_icons/grabber_disabled = SubResource( 1 )
custom_icons/grabber_highlight = SubResource( 2 )
custom_icons/grabber = SubResource( 3 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
[connection signal="mouse_entered" from="." to="." method="_on_HboxContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HboxContainer_mouse_exited"]
[connection signal="pressed" from="MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_PlusButton_pressed"]
[connection signal="focus_entered" from="HiddenSlider" to="." method="_on_HiddenSlider_focus_entered"]
[connection signal="focus_exited" from="HiddenSlider" to="." method="_on_HiddenSlider_focus_exited"]
[connection signal="value_changed" from="HiddenSlider" to="." method="_on_HiddenSlider_value_changed"]
